[tool.poetry]
name = "staking_image"
version = "0.0.1"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.119.0"}
pydantic = "^2.12.0"
pillow = "^11.3.0"
eth-abi = "^5.2.0"

[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)"
]
